tests/paczka1/fuzzy1/94561118.err
Error in line 3: CEGS S194 89,37
Error in line 1: V38q S194 11,0
Error in line 5: 5X5xlo A631 0,8
Error in line 24: mVsOgx S165 145,9
Error in line 35: mVsOgx S194 778,8
